# rapidsnark-rust

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs  zkey_utils.rs
src/bin_utils/: mod.rs
