[package]
name = "rapidsnark-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.4"
byteorder = "1.4.3"
num-bigint = "0.4.0"
ark-std = { version = "=0.4.0", default-features = false, features = ["parallel"] }
ark-serialize = { version = "=0.4.2", default-features = false }